# ai-cicd-test

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_groq_api.py  tests.py
.github/workflows/: ci.yml  deploy_guard.yml  log_analysis.yml  pr_review.yml  security_scan.yml
config/: default.yml  security_paths.yml  security_rules.yml
scripts/: ai_engine.py  deploy_guard.py  log_analyzer.py  pr_analyzer.py  security_scanner.py
src/aicicd/: cli.py
src/aicicd/core/: deploy_guard.py  log_analysis.py  models.py  security_scan.py
